Dec 11 2002  2.7.1  Merged more hopper patches from Anders Gustafsson
Dec 10 2002  2.7.1  Fixed some packet dissection and wep/interesting detection
                     bugs with fuzzy encryption mode
                    Added (broken) WEP decoding.  Right now this is just a 
                     bit-blender, I'm not sure it's going to give you ANYTHING
                     useful and it's not user-controllable yet.
                    Fixed WEP decoding, at least on the tests so far.  See the
                     'wepkey' config file option.  This is NOT for wep 
                     cracking - this is for decoding traffic on networks with
                     a known key (ie, monitoring stationary networks)
                    Fixed string extraction from decoded packets
                    Updated configure to look for ethereal 0.9.8
                    Minor fix to kismet_hopper (Anders Gustafsson)
                    Fixed WSP100 capture source flagging all packets as FCS
                     errors.
                    Fixed signed error w/ datasize on defective WEP packets
Dec 05 2002  2.7.1  Fixed wsp100 cygwin header
                    Started adding viha support.  VIHA SUPPORT DOES NOT WORK
                     CURRENTLY.
Dec 03 2002  2.7.1  Fixed kismet_monitor and kismet_unmonitor to work with the
                     new source definitions.
Dec 02 2002  2.7.1  Tweaked how frontend handles group naming to be faster
                     and to handle changing SSID's gracefully.
                    Changed configfile parser to allow multiple options of the
                     same type.
                    Revamped source handling again.  Multiple sources are now
                     defined by multiple 'source=' lines in the config, and
                     optionally enabled by name via the 'enablesources=' line.
                    Added filtering of PHY-layer packets from the dump file.