@@ -1,4 +1,5 @@
 Dec 11 2002  2.7.1  Merged more hopper patches from Anders Gustafsson
+                    Fixed tcpserver client line order
 Dec 10 2002  2.7.1  Fixed some packet dissection and wep/interesting detection
                      bugs with fuzzy encryption mode
                     Added (broken) WEP decoding.  Right now this is just a 
